python/src/jesd3c/parser/Jesd3cParser.py
# Generated from Jesd3cParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class Jesd3cParser(Parser):
    grammarFileName = "Jesd3cParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'\\u0002'",
        "'\\u0003'",
        "<INVALID>",
        "<INVALID>",
        "'QF'",
        "'QP'",
        "'QV'",
        "'F'",
        "'L'",
        "'C'",
        "'EH'",
        "'E'",
        "'UA'",
        "'UH'",
        "'U'",
        "'J'",
        "'X'",
        "'V'",
        "'P'",
    ]

    symbolicNames = [
        "<INVALID>",
        "STX",
        "ETX",
        "TERMINATOR",
        "NOTE_ID",
        "VAL_FUS_ID",
        "VAL_PIN_ID",
        "VAL_VEC_ID",
        "DEFAULT_ID",
        "FUSE_LIST_ID",
        "FUSE_CKSUM_ID",
        "ELEC_HEX_ID",
        "ELEC_BIN_ID",
        "USER_ASC_ID",
        "USER_HEX_ID",
        "USER_BIN_ID",
        "DEVICE_ID",
        "DEF_TEST_COND_ID",
        "TEST_VEC_ID",
        "PIN_LIST_ID",
        "HEX_DIGIT",
        "SPACE",
        "BINARY_DIGIT",
        "BINARY_NUMBER",
        "NUMBER",
        "HEX_NUMBER",
        "TEST_VEC_NUMBER",
        "TEST_COND",
        "NOTE",
    ]

    RULE_jesd3c = 0
    RULE_spec_field = 1
    RULE_spec = 2
    RULE_field = 3
    RULE_note_field = 4
    RULE_note = 5
    RULE_value_field = 6
    RULE_value_fuse_limit_field = 7
    RULE_fuse_limit = 8
    RULE_value_pin_count_field = 9
    RULE_pin_count = 10
    RULE_value_vec_limit_field = 11
    RULE_vec_limit = 12
    RULE_fuse_default_field = 13
    RULE_fuse_list_field = 14
    RULE_fuse_number = 15
    RULE_decimal = 16
    RULE_fuse_data = 17
    RULE_fuse_checksum_field = 18
    RULE_fuse_cksum = 19
    RULE_electrical_data_field = 20
    RULE_electrical_data_field_bin = 21
    RULE_electrical_data_field_hex = 22
    RULE_hex_fuse_data = 23
    RULE_user_data_field = 24
    RULE_user_data_field_bin = 25
    RULE_user_data_field_hex = 26
    RULE_user_data_field_asc = 27
    RULE_user_data_bin = 28
    RULE_user_data_hex = 29
    RULE_user_data_asc = 30
    RULE_device_id_field = 31
    RULE_arch_code = 32
    RULE_pinout_code = 33
    RULE_default_test_cond_field = 34
    RULE_default_test_cond = 35
    RULE_test_vector_field = 36
    RULE_vector_number = 37
    RULE_test_cond = 38
    RULE_pin_list_field = 39
    RULE_pin_list = 40
    RULE_pin_number = 41
    RULE_empty_field = 42
    RULE_xmit_cksum = 43

    ruleNames = [
        "jesd3c",
        "spec_field",
        "spec",
        "field",
        "note_field",
        "note",
        "value_field",
        "value_fuse_limit_field",
        "fuse_limit",
        "value_pin_count_field",
        "pin_count",
        "value_vec_limit_field",
        "vec_limit",
        "fuse_default_field",
        "fuse_list_field",
        "fuse_number",
        "decimal",
        "fuse_data",
        "fuse_checksum_field",
        "fuse_cksum",
        "electrical_data_field",
        "electrical_data_field_bin",
        "electrical_data_field_hex",
        "hex_fuse_data",
        "user_data_field",
        "user_data_field_bin",
        "user_data_field_hex",
        "user_data_field_asc",
        "user_data_bin",
        "user_data_hex",
        "user_data_asc",
        "device_id_field",
        "arch_code",
        "pinout_code",
        "default_test_cond_field",
        "default_test_cond",
        "test_vector_field",
        "vector_number",
        "test_cond",
        "pin_list_field",
        "pin_list",
        "pin_number",
        "empty_field",
        "xmit_cksum",
    ]

    EOF = Token.EOF
    STX = 1
    ETX = 2
    TERMINATOR = 3
    NOTE_ID = 4
    VAL_FUS_ID = 5
    VAL_PIN_ID = 6
    VAL_VEC_ID = 7
    DEFAULT_ID = 8
    FUSE_LIST_ID = 9
    FUSE_CKSUM_ID = 10
    ELEC_HEX_ID = 11
    ELEC_BIN_ID = 12
    USER_ASC_ID = 13
    USER_HEX_ID = 14
    USER_BIN_ID = 15
    DEVICE_ID = 16
    DEF_TEST_COND_ID = 17
    TEST_VEC_ID = 18
    PIN_LIST_ID = 19
    HEX_DIGIT = 20
    SPACE = 21
    BINARY_DIGIT = 22
    BINARY_NUMBER = 23
    NUMBER = 24
    HEX_NUMBER = 25
    TEST_VEC_NUMBER = 26
    TEST_COND = 27
    NOTE = 28

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class Jesd3cContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STX(self):
            return self.getToken(Jesd3cParser.STX, 0)

        def spec_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Spec_fieldContext, 0)

        def ETX(self):
            return self.getToken(Jesd3cParser.ETX, 0)

        def xmit_cksum(self):
            return self.getTypedRuleContext(Jesd3cParser.Xmit_cksumContext, 0)

        def field(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Jesd3cParser.FieldContext)
            else:
                return self.getTypedRuleContext(Jesd3cParser.FieldContext, i)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_jesd3c

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterJesd3c"):
                listener.enterJesd3c(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitJesd3c"):
                listener.exitJesd3c(self)

    def jesd3c(self):
        localctx = Jesd3cParser.Jesd3cContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_jesd3c)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(Jesd3cParser.STX)
            self.state = 89
            self.spec_field()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 1048568) != 0:
                self.state = 90
                self.field()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(Jesd3cParser.ETX)
            self.state = 97
            self.xmit_cksum()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Spec_fieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERMINATOR(self):
            return self.getToken(Jesd3cParser.TERMINATOR, 0)

        def spec(self):
            return self.getTypedRuleContext(Jesd3cParser.SpecContext, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_spec_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSpec_field"):
                listener.enterSpec_field(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSpec_field"):
                listener.exitSpec_field(self)

    def spec_field(self):
        localctx = Jesd3cParser.Spec_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_spec_field)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 28:
                self.state = 99
                self.spec()

            self.state = 102
            self.match(Jesd3cParser.TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SpecContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOTE(self, i: int = None):
            if i is None:
                return self.getTokens(Jesd3cParser.NOTE)
            else:
                return self.getToken(Jesd3cParser.NOTE, i)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_spec

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSpec"):
                listener.enterSpec(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSpec"):
                listener.exitSpec(self)

    def spec(self):
        localctx = Jesd3cParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_spec)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(Jesd3cParser.NOTE)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 28:
                self.state = 105
                self.match(Jesd3cParser.NOTE)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def empty_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Empty_fieldContext, 0)

        def note_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Note_fieldContext, 0)

        def value_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Value_fieldContext, 0)

        def fuse_default_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Fuse_default_fieldContext, 0)

        def fuse_list_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Fuse_list_fieldContext, 0)

        def fuse_checksum_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Fuse_checksum_fieldContext, 0)

        def electrical_data_field(self):
            return self.getTypedRuleContext(
                Jesd3cParser.Electrical_data_fieldContext, 0
            )

        def user_data_field(self):
            return self.getTypedRuleContext(Jesd3cParser.User_data_fieldContext, 0)

        def device_id_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Device_id_fieldContext, 0)

        def default_test_cond_field(self):
            return self.getTypedRuleContext(
                Jesd3cParser.Default_test_cond_fieldContext, 0
            )

        def test_vector_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Test_vector_fieldContext, 0)

        def pin_list_field(self):
            return self.getTypedRuleContext(Jesd3cParser.Pin_list_fieldContext, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterField"):
                listener.enterField(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitField"):
                listener.exitField(self)

    def field(self):
        localctx = Jesd3cParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_field)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.empty_field()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.note_field()
                pass
            elif token in [5, 6, 7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.value_field()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.fuse_default_field()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.fuse_list_field()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.fuse_checksum_field()
                pass
            elif token in [11, 12]:
                self.enterOuterAlt(localctx, 7)
                self.state = 117
                self.electrical_data_field()
                pass
            elif token in [13, 14, 15]:
                self.enterOuterAlt(localctx, 8)
                self.state = 118
                self.user_data_field()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 9)
                self.state = 119
                self.device_id_field()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 10)
                self.state = 120
                self.default_test_cond_field()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 11)
                self.state = 121
                self.test_vector_field()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 12)
                self.state = 122
                self.pin_list_field()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Note_fieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOTE_ID(self):
            return self.getToken(Jesd3cParser.NOTE_ID, 0)

        def TERMINATOR(self):
            return self.getToken(Jesd3cParser.TERMINATOR, 0)

        def note(self):
            return self.getTypedRuleContext(Jesd3cParser.NoteContext, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_note_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNote_field"):
                listener.enterNote_field(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNote_field"):
                listener.exitNote_field(self)

    def note_field(self):
        localctx = Jesd3cParser.Note_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_note_field)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(Jesd3cParser.NOTE_ID)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 28:
                self.state = 126
                self.note()

            self.state = 129
            self.match(Jesd3cParser.TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NoteContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOTE(self):
            return self.getToken(Jesd3cParser.NOTE, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_note

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNote"):
                listener.enterNote(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNote"):
                listener.exitNote(self)

    def note(self):
        localctx = Jesd3cParser.NoteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_note)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(Jesd3cParser.NOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Value_fieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value_fuse_limit_field(self):
            return self.getTypedRuleContext(
                Jesd3cParser.Value_fuse_limit_fieldContext, 0
            )

        def value_pin_count_field(self):
            return self.getTypedRuleContext(
                Jesd3cParser.Value_pin_count_fieldContext, 0
            )

        def value_vec_limit_field(self):
            return self.getTypedRuleContext(
                Jesd3cParser.Value_vec_limit_fieldContext, 0
            )

        def getRuleIndex(self):
            return Jesd3cParser.RULE_value_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterValue_field"):
                listener.enterValue_field(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitValue_field"):
                listener.exitValue_field(self)

    def value_field(self):
        localctx = Jesd3cParser.Value_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_value_field)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.value_fuse_limit_field()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.value_pin_count_field()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.value_vec_limit_field()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Value_fuse_limit_fieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL_FUS_ID(self):
            return self.getToken(Jesd3cParser.VAL_FUS_ID, 0)

        def fuse_limit(self):
            return self.getTypedRuleContext(Jesd3cParser.Fuse_limitContext, 0)

        def TERMINATOR(self):
            return self.getToken(Jesd3cParser.TERMINATOR, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_value_fuse_limit_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterValue_fuse_limit_field"):
                listener.enterValue_fuse_limit_field(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitValue_fuse_limit_field"):
                listener.exitValue_fuse_limit_field(self)

    def value_fuse_limit_field(self):
        localctx = Jesd3cParser.Value_fuse_limit_fieldContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 14, self.RULE_value_fuse_limit_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(Jesd3cParser.VAL_FUS_ID)
            self.state = 139
            self.fuse_limit()
            self.state = 140
            self.match(Jesd3cParser.TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fuse_limitContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(Jesd3cParser.NUMBER, 0)

        def BINARY_NUMBER(self):
            return self.getToken(Jesd3cParser.BINARY_NUMBER, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_fuse_limit

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFuse_limit"):
                listener.enterFuse_limit(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFuse_limit"):
                listener.exitFuse_limit(self)

    def fuse_limit(self):
        localctx = Jesd3cParser.Fuse_limitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fuse_limit)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not (_la == 23 or _la == 24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Value_pin_count_fieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL_PIN_ID(self):
            return self.getToken(Jesd3cParser.VAL_PIN_ID, 0)

        def pin_count(self):
            return self.getTypedRuleContext(Jesd3cParser.Pin_countContext, 0)

        def TERMINATOR(self):
            return self.getToken(Jesd3cParser.TERMINATOR, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_value_pin_count_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterValue_pin_count_field"):
                listener.enterValue_pin_count_field(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitValue_pin_count_field"):
                listener.exitValue_pin_count_field(self)

    def value_pin_count_field(self):
        localctx = Jesd3cParser.Value_pin_count_fieldContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 18, self.RULE_value_pin_count_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(Jesd3cParser.VAL_PIN_ID)
            self.state = 145
            self.pin_count()
            self.state = 146
            self.match(Jesd3cParser.TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pin_countContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(Jesd3cParser.NUMBER, 0)

        def BINARY_NUMBER(self):
            return self.getToken(Jesd3cParser.BINARY_NUMBER, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_pin_count

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPin_count"):
                listener.enterPin_count(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPin_count"):
                listener.exitPin_count(self)

    def pin_count(self):
        localctx = Jesd3cParser.Pin_countContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pin_count)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not (_la == 23 or _la == 24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Value_vec_limit_fieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL_VEC_ID(self):
            return self.getToken(Jesd3cParser.VAL_VEC_ID, 0)

        def vec_limit(self):
            return self.getTypedRuleContext(Jesd3cParser.Vec_limitContext, 0)

        def TERMINATOR(self):
            return self.getToken(Jesd3cParser.TERMINATOR, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_value_vec_limit_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterValue_vec_limit_field"):
                listener.enterValue_vec_limit_field(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitValue_vec_limit_field"):
                listener.exitValue_vec_limit_field(self)

    def value_vec_limit_field(self):
        localctx = Jesd3cParser.Value_vec_limit_fieldContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 22, self.RULE_value_vec_limit_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(Jesd3cParser.VAL_VEC_ID)
            self.state = 151
            self.vec_limit()
            self.state = 152
            self.match(Jesd3cParser.TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Vec_limitContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(Jesd3cParser.NUMBER, 0)

        def BINARY_NUMBER(self):
            return self.getToken(Jesd3cParser.BINARY_NUMBER, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_vec_limit

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVec_limit"):
                listener.enterVec_limit(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVec_limit"):
                listener.exitVec_limit(self)

    def vec_limit(self):
        localctx = Jesd3cParser.Vec_limitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_vec_limit)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            _la = self._input.LA(1)
            if not (_la == 23 or _la == 24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fuse_default_fieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None  # Token

        def DEFAULT_ID(self):
            return self.getToken(Jesd3cParser.DEFAULT_ID, 0)

        def TERMINATOR(self):
            return self.getToken(Jesd3cParser.TERMINATOR, 0)

        def BINARY_DIGIT(self):
            return self.getToken(Jesd3cParser.BINARY_DIGIT, 0)

        def getRuleIndex(self):
            return Jesd3cParser.RULE_fuse_default_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFuse_default_field"):
                listener.enterFuse_default_field(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFuse_default_field"):
                listener.exitFuse_default_field(self)

    def fuse_default_field(self):
        localctx = Jesd3cParser.Fuse_default_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_fuse_default_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(Jesd3cParser.DEFAULT_ID)
            self.state = 157
            localctx.value = self.match(Jesd3cParser.BINARY_DIGIT)
            self.state = 158
            self.match(Jesd3cParser.TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fuse_list_fieldContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
